# hildon-usb-gadgets

./: TODO  configure.ac
debian/: changelog  control
src/: Makefile.am  clear-gadget.c  gadget-helper.c  gadget-helper.h  mass-internal-gadget.c  mass-storage.h  network-gadget.c
