sbin_PROGRAMS = hildon-usb-gadget-network hildon-usb-gadget-clear hildon-usb-gadget-mass-internal

hildon_usb_gadget_network_LDFLAGS = -lusbgx
hildon_usb_gadget_mass_internal_LDFLAGS = -lusbgx
hildon_usb_gadget_clear_LDFLAGS = -lusbgx

hildon_usb_gadget_network_SOURCES = network-gadget.c \
    gadget-helper.h \
    gadget-helper.c \
    mass-storage.h

hildon_usb_gadget_mass_internal_SOURCES = mass-internal-gadget.c \
    gadget-helper.h \
    gadget-helper.c \
    mass-storage.h

hildon_usb_gadget_clear_SOURCES = clear-gadget.c \
    gadget-helper.h \
    gadget-helper.c \
    mass-storage.h
